/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package cardapio;

/**
 *
 * @author Pedro Rossi
 */
public class Bebida extends Item{
    public Bebida(String nome, double preco, String tipo) {
        super(nome, preco, tipo);
    }
}
