/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package estabelecimento;

/**
 *
 * @author Pedro Rossi
 */
public enum Status{
    Em_Preparo,
    Pronto,
    Entregue,
}
